# snitch-xml-output

./: .gitignore  CMakeLists.txt  all_fail.cpp  all_pass.cpp  approval.py  exceptions.cpp  requirements.txt  test.cpp  testing.hpp
.github/workflows/: cmake.yml
cmake/: CPM.cmake
